2000-10-12  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	From Daniel Berlin <dberlin@redhat.com> :

	* symtab.c (lookup_symbol_aux): New function. Renamed from
 	lookup_symbol. Move code to do demangling/case sensitivity to
 	lookup_symbol().
  	(lookup_symbol): Now wrapper for lookup_symbol_aux, so we can
 	perform case sensitivity/demangling without leaking memory.  Move
 	code to do demangling/case sensitivity from old_lookup_symbol to
 	here.
	(lookup_partial_symbol): Use SYMBOL_SOURCE_NAME instead of
 	SYMBOL_NAME.
	(lookup_block_symbol): Use SYMBOL_SOURCE_NAME instead of
 	SYMBOL_NAME. Don't do linear search in case of C++.

  	* symfile.c (compare_symbols): Use SYMBOL_SOURCE_NAME instead of
 	SYMBOL_NAME.
  	(compare_psymbols): Same here.

2000-10-09  Kevin Buettner  <kevinb@redhat.com>

	* remote-nindy.c (non_dle, nindy_xfer_inferior_memory): Protoize.
	* remote-os9k.c (rombug_xfer_inferior_memory): Protoize.
	* remote-rdi.c (arm_rdi_xfer_memory): Protoize.

2000-10-09  Peter Schauer  <pes@regent.e-technik.tu-muenchen.de>

	* config/i386/i386sol2.mh:  Add XM_CLIBS definition to resolve
	reference to gethostbyname.

2000-10-06  Kevin Buettner  <kevinb@redhat.com>

	* remote-eb.c (eb_xfer_inferior_memory): Protoize.
	* remote-es.c (es1800_xfer_inferior_memory, es1800_files_info):
	Protoize.
	* remote-mm.c (expect_msg): Protoize.

2000-10-04  Kevin Buettner  <kevinb@redhat.com>

	* rs6000-tdep.c (skip_prologue): Add new parameter lim_pc.
	Update all callers.

2000-10-03  Kevin Buettner  <kevinb@redhat.com>

	* remote-bug.c (bug_xfer_memory, bug_insert_breakpoint,
	bug_remove_breakpoint): Protoize.
	* remote-e7000.c (fetch_regs_from_dump, e7000_xfer_inferior_memory):
	Protoize.

2000-10-01  Kevin Buettner  <kevinb@redhat.com>

	* remote-adapt.c (adapt_insert_breakpoint, adapt_remove_breakpoint):
	Protoize.
	* remote-array.c (write_monitor, array_xfer_memory): Protoize.

2000-09-29  Kevin Buettner  <kevinb@redhat.com>
